--- a/lesson3/Lesson3_homework/index.html
+++ b/lesson3/Lesson3_homework/index.html
@@ -18,15 +18,22 @@
 					<li><a href="">link-4</a></li>
 				</ul>
 			</div>
-
-			<!-- <div class="clear"></div>
-
-			<div class="content fl"></div>
-			<div class="sidebar fr"></div>
-
-			<div class="clear"></div>
-			
-			<div class="footer"></div> -->
+			<div class="sidebar"></div>
+			<div class="content">
+				<div class="article1">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione unde recusandae obcaecati reiciendis alias quia odit, dolore perferendis autem nobis dignissimos aspernatur accusantium. Quidem minus consectetur officiis distinctio beatae!
+				</div>
+				<div class="article2">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, illum temporibus. Laborum iure velit, obcaecati. Asperiores quis quas provident debitis voluptate, architecto laudantium ullam similique sequi aspernatur, voluptatibus ad ipsa.
+					
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque accusamus aliquam consequuntur et, autem! Non iusto voluptas nesciunt esse repellat cupiditate iure officiis facere, magni quo natus omnis minima cum!
+				</div>
+				<div class="article3">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aperiam consectetur incidunt dolores, culpa porro laudantium quia, magnam! Eveniet debitis exercitationem, hic molestias maxime voluptatibus, qui culpa autem aperiam facilis. 
+				</div>
+			</div>
+			<div class="clear"></div>		
+			<div class="footer"></div>
 		</div>
 	</body>
 </html>
