lesson3_homework_header_content_model

--- a/lesson3/Lesson3_homework/index.html
+++ b/lesson3/Lesson3_homework/index.html
@@ -8,9 +8,7 @@
 	<body>
 		<div class="wrap">
 			<div class="header">
-				<div class="logo">
-					
-				</div>
+				<div class="logo"></div>
 				<ul class="nav">
 					<li><a href="">link-1</a></li>
 					<li><a href="">link-2</a></li>
@@ -22,21 +20,25 @@
 				<img width="270" height="100" src="Black_and_purple.png">
 			</div>
 			<div class="content">
-				<div class="article1">
-				 	<h1>Заголовок первого уровня</h1>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione unde recusandae obcaecati reiciendis alias quia odit, dolore perferendis autem nobis dignissimos aspernatur accusantium. Quidem minus consectetur officiis distinctio beatae!
-				</div>
-				<div class="article2">
-					<img class="img" src="Black_and_purple.png">
-					<div class="text">
-						<h1>Заголовок первого уровня</h1>
-					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, illum temporibus. Laborum iure velit, obcaecati. Asperiores quis quas provident debitis voluptate, architecto laudantium ullam similique sequi aspernatur, voluptatibus ad ipsa.
-
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque accusamus aliquam consequuntur et, autem! Non iusto voluptas nesciunt esse repellat cupiditate iure officiis facere, magni quo natus omnis minima cum!</span>
-					</div>
+				<div class="article">
 					
+					<div class="text">
+					 	<h1>Заголовок первого уровня</h1>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione unde recusandae obcaecati reiciendis alias quia odit, dolore perferendis autem nobis dignissimos aspernatur accusantium. Quidem minus consectetur officiis distinctio beatae!
+					</div>
+					<img class="img" src="Black_and_purple.png">
 				</div>
-				<div class="article3">
+				<div class="article">
+					<img class="img" src="Black_and_purple.png">
+					<span class="text">	
+						<h1>Заголовок первого уровня</h1>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, illum temporibus. Laborum iure velit, obcaecati. Asperiores quis quas provident debitis voluptate, architecto laudantium ullam similique sequi aspernatur, voluptatibus ad ipsa.
+
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque accusamus aliquam consequuntur et, autem! Non iusto voluptas nesciunt esse repellat cupiditate iure officiis facere, magni quo natus omnis minima cum!
+					</span>				
+				</div>
+				<div class="article">
+					<img class="img" src="Black_and_purple.png">
 					<h1>Заголовок первого уровня</h1>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aperiam consectetur incidunt dolores, culpa porro laudantium quia, magnam! Eveniet debitis exercitationem, hic molestias maxime voluptatibus, qui culpa autem aperiam facilis. 
 				</div>
