lesson 3 homework completed (except menu markers size)

--- a/lesson3/Lesson3_homework/index.html
+++ b/lesson3/Lesson3_homework/index.html
@@ -10,41 +10,60 @@
 			<div class="header">
 				<div class="logo"></div>
 				<ul class="nav">
-					<li><a href="">link-1</a></li>
-					<li><a href="">link-2</a></li>
-					<li><a href="">link-3</a></li>
-					<li><a href="">link-4</a></li>
+					<li><a href="#">link-1</a></li>
+					<li><a href="#">link-2</a></li>
+					<li><a href="#">link-3</a></li>
+					<li><a href="#">link-4</a></li>
 				</ul>
 			</div>
 			<div class="sidebar">
-				<img width="270" height="100" src="Black_and_purple.png">
+				<img class="sidebar-img" src="Black_and_purple.png">
+				<ul class="menu">
+					<li><p>Lorem ipsum dolor sit amet</p></li>
+					<li><p>gravida dolor sit amet lacus</p></li>
+					<li><p>parturient montes, nascetur ridiculus mus</p></li>
+					<li><p>felis tellus mollis orci, sed rhoncus sapien nunc eget odio</p></li>
+				</ul>
 			</div>
 			<div class="content">
-				<div class="article">
-					
-					<div class="text">
+				<div class="article fl">
+					<img class="img" src="Black_and_purple.png">
+					<span class="text fr">
 					 	<h1>Заголовок первого уровня</h1>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione unde recusandae obcaecati reiciendis alias quia odit, dolore perferendis autem nobis dignissimos aspernatur accusantium. Quidem minus consectetur officiis distinctio beatae!
-					</div>
-					<img class="img" src="Black_and_purple.png">
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
+						</p>
+					</span>			
 				</div>
-				<div class="article">
+				<div class="article fl">
 					<img class="img" src="Black_and_purple.png">
-					<span class="text">	
+					<span class="text fr">	
 						<h1>Заголовок первого уровня</h1>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, illum temporibus. Laborum iure velit, obcaecati. Asperiores quis quas provident debitis voluptate, architecto laudantium ullam similique sequi aspernatur, voluptatibus ad ipsa.
-
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque accusamus aliquam consequuntur et, autem! Non iusto voluptas nesciunt esse repellat cupiditate iure officiis facere, magni quo natus omnis minima cum!
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
+						</p>
+						<p>
+						Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
+						</p>
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
+						</p>
 					</span>				
 				</div>
-				<div class="article">
+				<div class="article fl">
 					<img class="img" src="Black_and_purple.png">
-					<h1>Заголовок первого уровня</h1>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aperiam consectetur incidunt dolores, culpa porro laudantium quia, magnam! Eveniet debitis exercitationem, hic molestias maxime voluptatibus, qui culpa autem aperiam facilis. 
+					<span class="text fr">
+						<h1>Заголовок первого уровня</h1>
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
+						</p>
+					</span>
 				</div>
 			</div>
 			<div class="clear"></div>		
-			<div class="footer">Copyright 2015</div>
+			<div class="footer">
+				<p class="f-text">&#169; Copyright 2015</p>
+			</div>
 		</div>
 	</body>
 </html>
