lesson 4 homework: edited after comments + archives (actual and prev. version)

--- a/lesson4/4_VolovodN/index.html
+++ b/lesson4/4_VolovodN/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div class="wrap">
+
 			<div class="header">
 				<div class="logo"></div>
 				<ul class="nav">
@@ -16,39 +17,43 @@
 					<li><a href="#">link-4</a></li>
 				</ul>
 			</div>
+
 			<div class="sidebar">
-				<img class="sidebar-img" src="img/content_img.png" alt="Content image">
-				<ul class="menu">
+				<img class="sidebar_img" src="img/content_img.png" alt="Content image"/>
+				<ul>
 					<li><p>Lorem ipsum dolor sit amet</p></li>
 					<li><p>gravida dolor sit amet lacus</p></li>
 					<li><p>parturient montes, nascetur ridiculus mus</p></li>
 					<li><p>felis tellus mollis orci, sed rhoncus sapien nunc eget odio</p></li>
 				</ul>
 			</div>
+
 			<div class="content">
 				<div class="article fl">				
 					<h1 class="text fr"><a href="#">Заголовок первого уровня</a></h1>
 					<p class="text fr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>	
-					<img class="img" src="img/content_img.png" alt="Content image">
+					<img class="content_img" src="img/content_img.png" alt="Content image"/>
 				</div>
 				<div class="article fl">
 					<h1 class="text fr"><a href="#">Заголовок первого уровня</a></h1>
 					<p  class="text fr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
 					<p  class="text fr">Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
 					<p  class="text fr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>	
-					<img class="img" src="img/content_img.png" alt="Content image">
-						
+					<img class="content_img" src="img/content_img.png" alt="Content image"/>			
 				</div>
 				<div class="article fl">
 					<h1 class="text fr"><a href="#">Заголовок первого уровня</a></h1>
 					<p class="text fr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
-					<img class="img" src="img/content_img.png" alt="Content image">
+					<img class="content_img" src="img/content_img.png" alt="Content image"/>
 				</div>
 			</div>
-			<div class="clear"></div>		
+
+			<div class="clear"></div>
+
 			<div class="footer">
-				<p class="f-text">&#169; Copyright 2015</p>
+				<p class="footer_text">&#169; Copyright 2015</p>
 			</div>
+
 		</div>
 	</body>
 </html>
