lesson 5 hw: header (search icon test)

--- a/lesson5/5_VolovodN/index.html
+++ b/lesson5/5_VolovodN/index.html
@@ -18,7 +18,9 @@
 				<li><a href="#">рекомендации</a></li>
 				<li><a href="#">контакты</a></li>
 			</ul> 
-
+			<div class="search">
+				<i class="search_image"></i>
+			</div>
 		</div>
 
 		<div class="wrap">
