lesson 5 hw: added content (not finished)

--- a/lesson5/5_VolovodN/index.html
+++ b/lesson5/5_VolovodN/index.html
@@ -19,6 +19,7 @@
 				<li><a href="#">контакты</a></li>
 			</ul> 
 			<div class="search">
+				
 				<i class="search_image"></i>
 			</div>
 		</div>
@@ -28,7 +29,22 @@
 			<div class="slider"></div>
 
 			<div class="content">
-				
+				<div class="plan starter">
+					<h1>Starter</h1>
+					<a href="#">choose plan</a>
+				</div>
+				<div class="plan basic">
+					<h1>Basic</h1>
+					<a href="#">choose plan</a>
+				</div>
+				<div class="plan pro">
+					<h1>Pro</h1>
+					<a href="#">choose plan</a>
+				</div>
+				<div class="plan ultra">
+					<h1>Ultra</h1>
+					<a href="#">choose plan</a>
+				</div>
 				<!-- <div class="article fl">
 					<h1>
 						<a href="#">
