lesson 5 hw: added content text

--- a/lesson5/5_VolovodN/index.html
+++ b/lesson5/5_VolovodN/index.html
@@ -31,18 +31,42 @@
 			<div class="content">
 				<div class="plan starter">
 					<h1>Starter</h1>
+					<h4>$19/PER MONTH</h4>
+					<p>5 users</p>
+					<p>10 projects</p>
+					<p>10GB amount of space!</p>
+					<p>5 e-mail accounts</p>
+					<h6>For individuals</h6>
 					<a href="#">choose plan</a>
 				</div>
 				<div class="plan basic">
 					<h1>Basic</h1>
+					<h4>$29/PER MONTH</h4>
+					<p>10 users</p>
+					<p>50 projects</p>
+					<p>50GB amount of space!</p>
+					<p>10 e-mail accounts</p>
+					<h6>For blogs and small business websites</h6>
 					<a href="#">choose plan</a>
 				</div>
 				<div class="plan pro">
 					<h1>Pro</h1>
+					<h4>$49/PER MONTH</h4>
+					<p>100 users</p>
+					<p>Unlimited projects</p>
+					<p>1TB amount of space!</p>
+					<p>100 e-mail accounts</p>
+					<h6>For consultants and corporate teams</h6>
 					<a href="#">choose plan</a>
 				</div>
 				<div class="plan ultra">
 					<h1>Ultra</h1>
+					<h4>$99/PER MONTH</h4>
+					<p>Unlimited users</p>
+					<p>Unlimited projects</p>
+					<p>Unlimited amount of space!</p>
+					<p>Unlimited e-mail accounts</p>
+					<h6>For large enterprises</h6>
 					<a href="#">choose plan</a>
 				</div>
 				<!-- <div class="article fl">
