lesson 5 hw: deleted pic, added hovers + 2-nd content block

--- a/lesson5/5_VolovodN/index.html
+++ b/lesson5/5_VolovodN/index.html
@@ -69,22 +69,32 @@
 					<h6>For large enterprises</h6>
 					<a href="#">choose plan</a>
 				</div>
-				<!-- <div class="article fl">
-					<h1>
-						<a href="#">
-						<img class="content_img1" src="img/content_img.png" alt="Content image"/>Заголовок первого уровня
-						</a>
-					</h1>
-					<p></p>
-					
-				</div> -->
+			</div>
+
+			<div class="content">
+				<div class="advertising">
+					<h1>Kenya Gold Coffee</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse consectetur, iste consequatur asperiores ut nulla cupiditate rerum, fugiat nobis aspernatur, nihil ipsa.</p>
+
+				</div>
+				<div class="advertising middle_position">
+					<h1>Kenya Gold Coffee</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse consectetur, iste consequatur asperiores ut nulla cupiditate rerum, fugiat nobis aspernatur, nihil ipsa.</p>
+
+				</div>
+				<div class="advertising right_position">
+					<img src="" alt="Place image here"/>
+					<h1>Kenya Gold Coffee</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse consectetur, iste consequatur asperiores ut nulla cupiditate rerum, fugiat nobis aspernatur, nihil ipsa.</p>
+
+				</div>
 			</div>
 
 			<!-- <div class="clear"></div> -->
 
 		</div>
-		<!-- <div class="footer">
-				 <p class="footer_text">&#169; Copyright 2015</p>
- 		</div> -->
+		<div class="footer">
+			<p class="footer_text">&#169; 2014 Мэрри Попинс.</p>
+ 		</div>
 	</body>
 </html>
