--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -6,117 +6,30 @@
 		<title>My page</title>
 	</head>
 	<body>
-		<div class="header shadow">
-			<i class="logo">
-				<i>мэрри попинс</i>
-				<p>Лучшие няни в мире</p>
-			</i>
-			<ul class="nav">
-				<li><a href="#">главная</a></li>
-				<li><a href="#">услуги</a></li>
-				<li><a href="#">рекомендации</a></li>
-				<li><a href="#">контакты</a></li>
-			</ul> 
-			<div class="search">
-				
-				<i class="search_image"></i>
-			</div>
+		<div class="content">
+			<p><a class="button" href="#">Button</a></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-
-		<div class="wrap">
-
-			<div class="slider"></div>
-
-			<div class="content">
-				<div class="plan starter shadow">
-					<h1>Starter</h1>
-					<h4>$19/PER MONTH</h4>
-					<ul>
-						<li>5 users</li>
-						<li>10 projects</li>
-						<li>10GB amount of space!</li>
-						<li>5 e-mail accounts</li>
-					</ul> 
-					<h6>For individuals</h6>
-					<a href="#">choose plan</a>
-				</div>
-				<div class="plan basic shadow">
-					<h1>Basic</h1>
-					<h4>$29/PER MONTH</h4>
-					<ul>
-						<li>10 users</li>
-						<li>50 projects</li>
-						<li>50GB amount of space!</li>
-						<li>10 e-mail accounts</li>
-					</ul> 
-					<h6>For blogs and small business websites</h6>
-					<a href="#">choose plan</a>
-				</div>
-				<div class="plan pro shadow">
-					<h1>Pro</h1>
-					<h4>$49/PER MONTH</h4>
-					<ul>
-						<li>100 users</li>
-						<li>Unlimited projects</li>
-						<li>1TB amount of space!</li>
-						<li>100 e-mail accounts</li>
-					</ul> 
-					<h6>For consultants and corporate teams</h6>
-					<a href="#">choose plan</a>
-				</div>
-				<div class="plan ultra shadow">
-					<h1>Ultra</h1>
-					<h4>$99/PER MONTH</h4>
-					<ul>
-						<li>Unlimited users</li>
-						<li>Unlimited projects</li>
-						<li>Unlimited amount of space!</li>
-						<li>Unlimited e-mail accounts</li>
-					</ul> 
-					<h6>For large enterprises</h6>
-					<a href="#">choose plan</a>
-				</div>
-			</div>
-
-			<div class="content">
-				<div class="advertising shadow">
-					<img src="img/place_image_here.png" alt="Place image here">
-					<h1>Kenya Gold Coffee</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse...</p>
-					<i class="clock">
-						<p>3h ago</p>
-					</i>
-					<i class="message">
-						<p>23</p>
-					</i>
-				</div>
-				<div class="advertising shadow middle_position">
-					<img src="img/place_image_here.png" alt="Place image here">
-					<h1>Kenya Gold Coffee</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse...</p>
-					<i class="clock">
-						<p>3h ago</p>
-					</i>
-					<i class="message">
-						<p>23</p>
-					</i>
-				</div>
-				<div class="advertising shadow right_position">
-					<img src="img/place_image_here.png" alt="Place image here">
-					<h1>Kenya Gold Coffee</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse...</p>
-					<i class="clock">
-						<p>3h ago</p>
-					</i>
-					<i class="message">
-						<p>23</p>
-					</i>
-				</div>
-			</div>
-
+		<div class="sidebar">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div class="footer">
-			<p class="footer_text">&#169; 2014 Мэрри Попинс.</p>
- 		</div>
+		<div class="clear"></div>
+		<div class="footer"></div>
 	</body>
 </html>
