lesson 6 hw finished

--- a/lesson6/6_VolovodN/index.html
+++ b/lesson6/6_VolovodN/index.html
@@ -76,21 +76,27 @@
 			</div>
 		
 			<div class="article shadow">
-				<img src="img/place_image_here.png" alt="Place image here">
+				<div>
+					<img src="img/place_image_here.png" alt="Place image here">
+				</div>
 				<h1>Kenya Gold Coffee</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse...</p>
 				<p class="clock">3h ago</p>
 				<a class="comment" href="#">23</a>
 			</div>
 			<div class="article shadow middle_position">
-				<img src="img/place_image_here.png" alt="Place image here">
+				<div>
+					<img src="img/place_image_here.png" alt="Place image here">
+				</div>
 				<h1>Kenya Gold Coffee</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse...</p>
 				<p class="clock">3h ago</p>
 				<a class="comment" href="#">23</a>
 			</div>
 			<div class="article shadow right_position">
-				<img src="img/place_image_here.png" alt="Place image here">
+				<div>
+					<img src="img/place_image_here.png" alt="Place image here">
+				</div>
 				<h1>Kenya Gold Coffee</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, explicabo eos maiores inventore eum dolores at esse...</p>
 				<p class="clock">3h ago</p>
