lesson 8 hw : fixed tabs in html

--- a/lesson8/hw/8_Group2/index.html
+++ b/lesson8/hw/8_Group2/index.html
@@ -31,32 +31,40 @@
             <h1 class="title title-services">our services.</h1>
             <div class="services-main">
                 <div class="service-feasture">
-                    <div class="services-main-round"><i class="fa fa-cloud fa-2x"></i></div>
+                    <div class="services-main-round">
+                        <i class="fa fa-cloud fa-2x"></i>
+                    </div>
                     <div class="services-main-text">
-                    <h3>feature 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        <h3>feature 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="service-feasture">
-                    <div class="services-main-round"><i class="fa fa-cutlery fa-2x"></i></div>
+                    <div class="services-main-round">
+                        <i class="fa fa-cutlery fa-2x"></i>
+                    </div>
                     <div class="services-main-text">
-                    <h3>feature 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        <h3>feature 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="service-feasture">
-                    <div class="services-main-round"><i class="fa fa-bolt fa-2x"></i></div>
+                    <div class="services-main-round">
+                        <i class="fa fa-bolt fa-2x"></i>
+                    </div>
                     <div class="services-main-text">
-                    <h3>feature 3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        <h3>feature 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="service-feasture">
-                    <div class="services-main-round"><i class="fa fa-gavel fa-2x"></i></div>
+                    <div class="services-main-round">
+                        <i class="fa fa-gavel fa-2x"></i>
+                    </div>
                     <div class="services-main-text">
-                    <h3>feature 4</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        <h3>feature 4</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                     </div>
                 </div>
             </div>         
@@ -67,7 +75,9 @@
         <div class="wrap">
             <h1 class="title">our works.</h1>
             <div class="portfolio-buttons">
-                <a href=""><button class="portfolio-buttons-but">All</button></a>
+                <a href="">
+                    <button class="portfolio-buttons-but">All</button>
+                </a>
                 <button class="portfolio-buttons-but">Website</button>
                 <button class="portfolio-buttons-but">Branding</button>
             </div>
@@ -210,34 +220,59 @@
                 </div>
                 <div class="skills-main-right">
                     <ul>
-                        <li><i class="fa fa-rocket fa-1x"></i>Totam rem aperiam eaque<div class="skills-add"><i class="fa fa-angle-down fa-1x"></i></div>
+                        <li>
+                            <i class="fa fa-rocket fa-1x"></i>
+                            Totam rem aperiam eaque
+                            <div class="skills-add">
+                                <i class="fa fa-angle-down fa-1x"></i>
+                            </div>
                             <ul>
                                 <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident.</li>
+                                Excepteur sint occaecat cupidatat non proident.</li>
                             </ul>
                         </li>
-                        <li><i class="fa fa-unlock-alt fa-1x"></i>About<div class="skills-add"><i class="fa fa-angle-down fa-1x"></i></div>
+                        <li>
+                            <i class="fa fa-unlock-alt fa-1x"></i>
+                            About
+                            <div class="skills-add">
+                                <i class="fa fa-angle-down fa-1x"></i>
+                            </div>
                             <ul>
                                 <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident.</li>
+                                Excepteur sint occaecat cupidatat non proident.</li>
                             </ul>
                         </li>
-                        <li><i class="fa fa-location-arrow fa-1x"></i>Portfolio<div class="skills-add"><i class="fa fa-angle-down fa-1x"></i></div>
+                        <li>
+                            <i class="fa fa-location-arrow fa-1x"></i>
+                            Portfolio
+                            <div class="skills-add">
+                                <i class="fa fa-angle-down fa-1x"></i>
+                            </div>
                             <ul>
                                 <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident.</li>
+                                Excepteur sint occaecat cupidatat non proident.</li>
                             </ul>
                         </li>
-                        <li><i class="fa fa-phone fa-1x"></i>Blog<div class="skills-add"><i class="fa fa-angle-down fa-1x"></i></div>
+                        <li>
+                            <i class="fa fa-phone fa-1x"></i>
+                            Blog
+                            <div class="skills-add">
+                                <i class="fa fa-angle-down fa-1x"></i>
+                            </div>
                             <ul>
                                 <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident.</li>
+                                Excepteur sint occaecat cupidatat non proident.</li>
                             </ul>
                         </li>
-                        <li><i class="fa fa-book fa-1x"></i>Contact<div class="skills-add"><i class="fa fa-angle-down fa-1x"></i></div>
+                        <li>
+                            <i class="fa fa-book fa-1x"></i>
+                            Contact
+                            <div class="skills-add">
+                                <i class="fa fa-angle-down fa-1x"></i>
+                            </div>
                             <ul>
                                 <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident.</li>
+                                Excepteur sint occaecat cupidatat non proident.</li>
                             </ul>
                         </li>
                     </ul>
